<resources>
    <string name="app_name">Audioboog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="_current_time_placeholder">00:00:00</string>
    <string name="_total_duration_placeholder">00:04:10</string>
    <string name="audio_file_cover">Audio file cover</string>
    <string name="percentage_placeholder">50%</string>
    <string name="playback_speed_button">Set playback speed</string>
    <string name="timeout_button">Set timeout</string>
    <string name="play_or_pause_button">Play or Pause</string>
    <string name="audio_name">Audio Name</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="playback_speed_placeholder">1.00x</string>
    <string name="fast_rewind_description">Go back 10 seconds</string>
    <string name="fast_forward_description">Forward 10 seconds</string>
    <string name="previous_button_description">Play previous song</string>
    <string name="next_button_description">Play next song</string>
    <string name="app_title">Audioboog</string>
    <string name="delete_audiobook">Delete Audiobook</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="chapterTimeout">ends in 00:05:12</string>
</resources>